# ImageFeatureExtractor

./: .coveragerc  .gitignore  .travis.yml  LICENSE  README.md  pyproject.toml  usage.py
ife/: __init__.py
ife/features/: __init__.py  colourfulness.py  features.py  moment.py
ife/features/tests/: test_colourfulness.py  test_features.py  test_moment.py
ife/io/: io.py
ife/io/tests/: test_io.py
ife/util/: array.py
ife/util/tests/: test_array.py
